# companion

./: .dockerignore  .gitignore  APPENDICES.md  CONTRIBUTING.md  Dockerfile  LATER.md  Makefile  README.md  pyproject.toml  requirements.txt
challenges/: ch01.txt  ch02.txt  ch03.txt  ch04.txt  ch05.txt  ch06.txt  ch07.txt  ch08.txt  ch09.txt  ch10.txt  ch11.txt  ch12.txt  ch13.txt  ch14.txt  ch15.txt
chapters/01-laying-plans/: anti-pattern-demo.py  golden-dataset.csv  guardrail-config.yaml  run-eval.py  spec.md  trace-example.json
chapters/02-waging-war/: anti-pattern-demo.py  golden-dataset.csv  guardrail-config.yaml  run-eval.py  spec.md  trace-example.json
chapters/03-attack-by-stratagem/: anti-pattern-demo.py  golden-dataset.csv  guardrail-config.yaml  run-eval.py  spec.md  trace-example.json
chapters/04-tactical-dispositions/: anti-pattern-demo.py  golden-dataset.csv  guardrail-config.yaml  run-eval.py  spec.md  trace-example.json
chapters/05-energy/: anti-pattern-demo.py  golden-dataset.csv  guardrail-config.yaml  run-eval.py  spec.md  trace-example.json
chapters/06-weak-points-and-strong/: anti-pattern-demo.py  golden-dataset.csv  guardrail-config.yaml  run-eval.py  spec.md  trace-example.json
chapters/07-manoeuvring/: anti-pattern-demo.py  golden-dataset.csv  guardrail-config.yaml  run-eval.py  spec.md  trace-example.json
chapters/08-variation-in-tactics/: anti-pattern-demo.py  golden-dataset.csv  run-eval.py  (+3 more)
playground/: README.md  ch1-demo.ipynb  ch2-demo.ipynb  mock-agent.py
scripts/: run_all.py  setup.ps1  setup.sh  validate_structure.py
(+42 files in other folders)
