[project]
name = "art-of-agents-companion"
version = "0.1.0"
description = "Executable companion for The Art of Agents, by Jacob Verhoeks."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12,<3.15"
authors = [
    {name = "Jacob Verhoeks"},
]
# Versions pinned to April 2026 releases. See requirements.txt for the same list.
dependencies = [
    "ragas>=0.4.3,<0.5",
    "langfuse>=4.2.0,<5",
    "dspy-ai>=3.1.3,<4",
    "litellm>=1.83.0,<2",
    "anthropic>=0.60.0,<1",
    "openai>=2.31.0,<3",
    "instructor>=1.12.0,<2",
    "pydantic>=2.12.0,<3",
    "pandas>=3.0.0,<4",
    "duckdb>=1.3.0,<2",
    "pyyaml>=6.0.3",
    "langgraph>=0.6.0,<1",
    "datasets>=4.8.0,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "jupyter>=1.1.0",
    "nbformat>=5.10.0",
]

[project.urls]
Homepage = "https://theartofagents.com"
Repository = "https://github.com/jverhoeks/the-art-of-agents"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chapters"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
